--- a/第四章-数组.adoc
+++ b/第四章-数组.adoc
@@ -2,9 +2,12 @@
 
 === 数组字面量
 
+[source,perl6]
+----
 my @primes = (2,3,5,7,11,13,17,19,23);   # an array gets filled like in Perl 5
-# my @primes =  2,3,5,7,11,13,17,19,23 ; # 同样的事情, 不需要圆括号
-# my @primes = <2 3 5 7 11 13 17 19 23>; # 同样, <> 等价于 qw()
+my @primes =  2,3,5,7,11,13,17,19,23 ;   # 同样的事情, 不需要圆括号
+my @primes = <2 3 5 7 11 13 17 19 23>;   # 同样, <> 等价于 qw()
+----
 
 === 数组切片
 
