--- a/第二十九章-运算符.adoc
+++ b/第二十九章-运算符.adoc
@@ -4,7 +4,7 @@
 
 输出下面的文本:
 
-[source,perl6]
+[source,raku]
 ----
 # OUTPUT
 What is your name?  It is lancelot.
@@ -12,7 +12,7 @@ What is your quest?  It is the holy grail.
 What is your favorite color?  It is blue.
 ----
 
-[source,perl6]
+[source,raku]
 ----
 my @questions = ('name', ' quest',  'favorite color');
 my @answers = ("lancelot", "the holy grail", "blue");
@@ -33,17 +33,17 @@ list = [ {'date': '2010-04-01','people': 1047, 'hits': 4522},
 
 === «
 
-[source,perl6]
+[source,raku]
 ----
 my @days = Date.new('2019-04-01') .. Date.new('2019-04-10');
-.say for "/perl6/" «~« @days;
+.say for "/raku/" «~« @days;
 ----
 
 === feed 
 
 ==== infix ==>
 
-[source,perl6]
+[source,raku]
 ----
 # Traditional structure, read bottom-to-top
 my @result =
@@ -92,7 +92,7 @@ my @result =
 
 这个向左的流操作符从右侧接收结果并把结果作为最后的一个参数传递给它前面的(左侧的)例程。这为一系列列表操作函数阐明了从右到左的数据流。
 
-[source,perl6]
+[source,raku]
 ----
 # Traditional structure, read bottom-to-top
 my @result =
@@ -133,7 +133,7 @@ my @result =
 
 超运算符与子例程
 
-[source,perl6]
+[source,raku]
 ----
 my @a = <1 2 3 4>;
 sub by2($n){
@@ -153,14 +153,14 @@ the name of the by2 function is &by2, just as the name of the foo scalar is $foo
 
 - 生成 IP 地址范围
 
-[source,perl6]
+[source,raku]
 ----
 .say for "192.168.10." «~» (0..255).list
 ----
 
 - 生成 OC 中的测试数组
 
-[source,perl6]
+[source,raku]
 ----
 .say for "@" «~» '"Perl' «~»  (1..5).list «~» '",'
 ----
@@ -182,7 +182,7 @@ the name of the by2 function is &by2, just as the name of the foo scalar is $foo
 比如希望长度为1，输出A,G,C,T。
 如果长度为2，输出AA,AG,AC,AT,GA,GG,GC,GT,CA,CG,CC,CT,TA,TG,TC,TT。这样的结果。
 
-[source,perl6]
+[source,raku]
 ----
 my @a=<A G C T>;
 my $x=@a;  # 或者使用 $x =@('A','G','C','T')
@@ -193,14 +193,14 @@ for 1 ...^ * -> $a {(([X~] $x xx $a)).join(',').say;last if $a==4;}
 
 `Z` 像一个拉链那样把列表插入进来， 只要第一个输入列表耗尽就停止：
 
-[source,perl6]
+[source,raku]
 ----
 say (1, 2 Z <a b c> Z <+ ->).perl;  # ((1, "a", "+"), (2, "b", "-")).list
 ----
 
 `Z` 操作符也作为元操作符存在， 此时内部的 parcels 被应用了元操作符的列表替换：
 
-[source,perl6]
+[source,raku]
 ----
 say 100, 200 Z+ 42, 23;
 say 1..3 Z~ <a b c> Z~ 'x' xx 3;
@@ -219,7 +219,7 @@ say 1..3 Z~ <a b c> Z~ 'x' xx 3;
 
 `X` 从所有列表创建一个外积。最右边的元素变化得最迅速。
 
-[source,perl6]
+[source,raku]
 ----
 1..3 X <a b c> X 9
 ----
@@ -233,7 +233,7 @@ say 1..3 Z~ <a b c> Z~ 'x' xx 3;
 
 `X` 操作符也可以作为元操作符， 此时内部的 parcels 被应用了元操作符的列表的值替换：
 
-[source,perl6]
+[source,raku]
 ----
 1..3 X~ <a b c> X~ 9
 ----
@@ -255,7 +255,7 @@ say 1..3 Z~ <a b c> Z~ 'x' xx 3;
 
 默认的生成器是 `\*.succ` 或 `*.pred` ， 取决于末端怎么比较：
 
-[source,perl6]
+[source,raku]
 ----
 say 1 ... 4;        # 1 2 3 4
 say 4 ... 1;        # 4 3 2 1
@@ -265,14 +265,14 @@ say 'e' ... 'a';    # e d c b a
 
 `\*` (Whatever) 末端生成一个无限序列，使用的是默认的生成器 `*.succ`。
 
-[source,perl6]
+[source,raku]
 ----
 say (1 ... *)[^5];  # 1 2 3 4 5
 ----
 
 自定义生成器是在 `...` 操作符之前的最后一个参数。下面这个自定义生成器接收两个参数， 生成了斐波纳契数。
 
-[source,perl6]
+[source,raku]
 ----
 say (1, 1, -> $a, $b { $a + $b } ... *)[^8];    # 1 1 2 3 5 8 13 21
 # same but shorter
@@ -281,7 +281,7 @@ say (1, 1, *+* ... *)[^8];                      # 1 1 2 3 5 8 13 21
 
 当然自定义生成器也能只接收一个参数。
 
-[source,perl6]
+[source,raku]
 ----
 say 5, { $_ * 2 } ... 40;                       # 5 10 20 40
 ----
@@ -290,7 +290,7 @@ say 5, { $_ * 2 } ... 40;                       # 5 10 20 40
 
 如果没有生成器，并且有不止一个初始元素，所有的初始元素都是数值，那么序列操作符会尝试推导出生成器。它知道数学和几何序列。
 
-[source,perl6]
+[source,raku]
 ----
 say 2, 4, 6 ... 12;     # 2 4 6 8 10 12
 say 1, 2, 4 ... 32;     # 1 2 4 8 16 32
@@ -300,7 +300,7 @@ say 1, 2, 4 ... 32;     # 1 2 4 8 16 32
 
 这允许你这样写：
 
-[source,perl6]
+[source,raku]
 ----
 say 1, 1, *+* ...^ *>= 100;
 ----
@@ -309,7 +309,7 @@ say 1, 1, *+* ...^ *>= 100;
 
 `...` 操作符还会把初始值看作”已生成的元素”，所以它们也会对末端进行检查：
 
-[source,perl6]
+[source,raku]
 ----
 my $end = 4;
 say 1, 2, 4, 8, 16 ... $end;
@@ -320,7 +320,7 @@ say 1, 2, 4, 8, 16 ... $end;
 
 - 计算哪些日子是周六：
 
-[source,perl6]
+[source,raku]
 ----
 enum DoW < Sunday Monday Tuesday Wednesday Thursday Friday Saturday >;
 say (Date.new("2019-01-01")..Date.new("2019-12-31")).grep( *.day-of-week == Saturday );
