--- a/第八章-副词.adoc
+++ b/第八章-副词.adoc
@@ -72,7 +72,7 @@
 
 胖箭头结构应只用于项(term)所在位置因为它被认为是一个独立的表达式，因为胖箭头自身被解析为一个普通的中缀操作符（即使自动引起它左侧的标识符时）。因为左侧是一个普通的表达式，胖箭头形式会使用任何值作为键来创建 Pair。另一方面，当用上面的形式来生成 Pair 对象时，副词形式被约束为使用标识符作为键。在键不是标识符的地方，你必须使用胖箭头形式来生成 Pair。
 
-尽管有那个约束，但是冒号和括号之间有其它东西也是可能的；然而，所有可能的非标识符形式的副词形式的键都被保留用作特殊的语义形式。Perl 6 当前识别十进制数的键和空(null)键。在下面的表格中，第一列和第二列不是同一个东西：
+尽管有那个约束，但是冒号和括号之间有其它东西也是可能的；然而，所有可能的非标识符形式的副词形式的键都被保留用作特殊的语义形式。Raku 当前识别十进制数的键和空(null)键。在下面的表格中，第一列和第二列不是同一个东西：
 
 .Table title
 |===
@@ -121,36 +121,36 @@
 
 所有的副词形式（包括普通的带有标识符键的副词）被认为是特殊的令牌(tokens)并且除了能在项的位置上被识别，也能在各种不同的位置上被识别。特别地，当把它用在中缀的位置上时，它们修改了之前的顶端的优先级比"loose unary"紧凑的操作符：
 
-[source,perl6]
+[source,raku]
 ----
 1 == 100 :fuzz(3)   # 调用: infix:<==>(1, 100, fuzz => 3)
 ----
 
 在声明内部副词形式用于重命名参数声明：
 
-[source,perl6]
+[source,raku]
 ----
 sub foo ( :externalname($myname) ) { ... }
 ----
 
 副词修改了各种引号形式的意义：
 
-[source,perl6]
+[source,raku]
 ----
 q:x 'cat /etc/passwd'
 ----
 
-当副词被追加到标识符（即，在后缀位置上）后面时，副词形式的语法用于生成那个标识符的唯一变体；该语法用于命名诸如 `infix:<+>` 这样的操作符和诸如 `statement_control:if` 这样的多重分发文法规则。当这样用时，副词被认为是名字的一部分，所以 `infix:<+>` 和 `infix:<->` 是两个不同的操作符。同样地, `prefix:<+>` 不同于 `infix<+>`。（这种记法的好处有把不同的标识符分组到容易访问的集合中，例如，这就是 Perl 6 标准文法时如何知道当前中缀操作符集合的）。
+当副词被追加到标识符（即，在后缀位置上）后面时，副词形式的语法用于生成那个标识符的唯一变体；该语法用于命名诸如 `infix:<+>` 这样的操作符和诸如 `statement_control:if` 这样的多重分发文法规则。当这样用时，副词被认为是名字的一部分，所以 `infix:<+>` 和 `infix:<->` 是两个不同的操作符。同样地, `prefix:<+>` 不同于 `infix<+>`。（这种记法的好处有把不同的标识符分组到容易访问的集合中，例如，这就是 Raku 标准文法时如何知道当前中缀操作符集合的）。
 
 只有能产生一列一个或更多值（偏好字符串）的标识符被允许作为名字扩展；特殊地，闭包不能作为值，所以 `:{...}` 形式的副词不能被允许作为名字扩展。特别地，这把方法名后面的 block 空了出来，所以它允许我们把 block 解析为方法的参数：
 
-[source,perl6]
+[source,raku]
 ----
 @stuff.sort:{ +$_ }
 ----
 这些看起来它们使用的是 pairs，实际上它们等价于：
 
-[source,perl6]
+[source,raku]
 ----
 @stuff.sort: { +$_ }
 ----
@@ -159,7 +159,7 @@ q:x 'cat /etc/passwd'
 
 胖箭头和副词对儿记法都能用于把具名参数作为项传递给函数或方法。在括号里面带有参数的调用后面，只有副词形式的语法能用于传递额外的参数。这通常用于传递额外的 block:
 
-[source,perl6]
+[source,raku]
 ----
 find($directory) :{ when not /^\./ }
 ----
@@ -177,12 +177,12 @@ find($directory) :{ when not /^\./ }
 
 对于接收一个非否定整数参数的标识符，它被允许缩写，例如，把 `:sweet(16)` 缩写为 `:16sweet`。（这个和 `:16<deadbeef>` 形式不一样，后者从来没有字母字符跟在数字后面。）只有字面的非负数字可以这样交换使用。请注意这个缩写允许：
 
-[source,perl6]
+[source,raku]
 ----
 s:2nd/foo/bar/  # or 3rd, 4th, 5th etc.
 ----
 
-其它形式的副词（包括裸的 `:a` 形式）总是查找紧紧跟随的用括号括起的参数，并且把它吞噬掉。如果那没有达到预期，那么你必须在副词和开括号之间使用空白。在 Perl 6中单独的副词语法在各处都是相同的。基于参数是需要还是不需要，没有例外。（对于引号副词和 regex 副词有一个小例外，它们只接受圆括号作为它们的括号操作符，并且忽略其它括号，如果需要它们必须被放到括号里。查看上表中得" Paren form"）
+其它形式的副词（包括裸的 `:a` 形式）总是查找紧紧跟随的用括号括起的参数，并且把它吞噬掉。如果那没有达到预期，那么你必须在副词和开括号之间使用空白。在 Raku中单独的副词语法在各处都是相同的。基于参数是需要还是不需要，没有例外。（对于引号副词和 regex 副词有一个小例外，它们只接受圆括号作为它们的括号操作符，并且忽略其它括号，如果需要它们必须被放到括号里。查看上表中得" Paren form"）
 
 除了上面要注意的之外，解析器常常会寻找括号。尽管没有标示一个真的下标，括号被类似地解析为后缀操作符。因为把括号后缀化可以和它们起初的使用 unspace 或点(或两者都) `:foo` 的区分开。
 
@@ -192,7 +192,7 @@ s:2nd/foo/bar/  # or 3rd, 4th, 5th etc.
 
 为了使切片下标返回除了值以外的其它东西，那么给下标(subscript)添加合适的副词。
 
-[source,perl6]
+[source,raku]
 ----
 @array = <A B>;
 @array[0,1,2];      # returns 'A', 'B', (Any)
@@ -212,7 +212,7 @@ s:2nd/foo/bar/  # or 3rd, 4th, 5th etc.
 
 如果副词为真，那么这些副词形式都会清除不存在的条目；如果为假的话，就会留下不存在的项，就像普通的切片那样。所以：
 
-[source,perl6]
+[source,raku]
 ----
 @array[0,1,2] :!p;  # returns 0 => 'A', 1 => 'B', 2 => (Any)
 %hash<a b c>  :!kv; # returns 'a', 'A', 'b', 'B', 'c', (Any)
@@ -220,14 +220,14 @@ s:2nd/foo/bar/  # or 3rd, 4th, 5th etc.
 
 同样地，
 
-[source,perl6]
+[source,raku]
 ----
 my ($a,$b,$c) = %hash<a b c> :delete;
 ----
 
 删除那些条目并顺道返回它们。这种形式能够工作是因为下标是顶端的在前的操作符。如果某些其它的操作符的优先级比处于顶端的逗号操作符的优先级紧凑，那么你必须用括号括起它或强制为列表上下文：
 
-[source,perl6]
+[source,raku]
 ----
 1 + (%hash{$x} :delete);
 $x = (%hash{$x} :delete);
@@ -238,7 +238,7 @@ $x = (%hash{$x} :delete);
 
 你也可以执行存在性测试，要么测试单个条目是否存在，要么测试条目的连接是否存在：
 
-[source,perl6]
+[source,raku]
 ----
 if %hash<foo> :exists           {...}
 if %hash{any <a b c>}  :exists  {...}
@@ -249,7 +249,7 @@ if %hash{none <a b c>} :exists  {...}
 
 把 `:exists` 副词和一组切片结果的布尔值列表结合起来使用，你也可以用类型的语义这样使用：
 
-[source,perl6]
+[source,raku]
 ----
 if any %hash<a b c>  :exists {...}
 if all %hash<a b c>  :exists {...}
@@ -263,14 +263,14 @@ if none %hash<a b c> :exists {...}
 
 像调用中得具名参数那样，下标中处理多个副词是没有顺序之分的。有些组合有意义，例如：
 
-[source,perl6]
+[source,raku]
 ----
 %a = %b{@keys-to-extract} :delete :p; # same as :p :delete
 ----
 
 会把给定的键分片到另外一个散列中。而
 
-[source,perl6]
+[source,raku]
 ----
 @actually-deleted = %h{@keys-to-extract} :delete :k; # same as :k :delete
 ----
@@ -281,7 +281,7 @@ if none %hash<a b c> :exists {...}
 
 下面的这些副词组合被看做是合法的：
 
-[source,perl6]
+[source,raku]
 ----
 :delete :kv            delete, return key/values of actually deleted keys
 :delete :!kv           delete, return key/values of all keys attempted
