--- a/第十八章-主题变量.adoc
+++ b/第十八章-主题变量.adoc
@@ -6,7 +6,7 @@
 
 === for
 
-[source,perl6]
+[source,raku]
 .for automatically set topic variable if there is no explicit signature
 ----
 for <a b c> { say $_ }  # sets $_ to 'a', 'b' and 'c' in turn
@@ -15,7 +15,7 @@ say $_ for <a b c>;     # same, even though it's not a block
 
 === given
 
-[source,perl6]
+[source,raku]
 .given
 ----
 given 'a'   { say $_ }  # sets $_ to 'a'
@@ -24,7 +24,7 @@ say $_ given 'a';       # same, even though it's not a block
 
 设置默认的主题变量可以省去很多打字：
 
-[source,perl6]
+[source,raku]
 ----
 for Date.new('2018-01-01') .. Date.new('2018-01-07') {
   printf("%04d%02d%02d%02d%02d%02d\n", .year, .month, .day, .hour, .minute, .second) given .DateTime
@@ -41,7 +41,7 @@ for Date.new('2018-01-01') .. Date.new('2018-01-07') {
 
 对象初始化：
 
-[source,perl6]
+[source,raku]
 ----
 class Employee {
     subset Salary         of Real where * > 0;
@@ -74,14 +74,14 @@ say $employee;
 
 在方法上调用 `$_` 可以通过省略变量名来缩的更短：
 
-[source,perl6]
+[source,raku]
 ----
 .say;                   # same as $_.say
 ----
 
 `m/regex/` 和 `/regex/` 正则匹配 `$\_` 而 `s/regex/subst/` 替换作用于 `$_`: 
 
-[source,perl6]
+[source,raku]
 ----
 say "Looking for strings with non-alphabetic characters...";
 for <ab:c d$e fgh ij*> {
@@ -98,7 +98,7 @@ for <ab:c d$e fgh ij*> {
 
 with 不引入块时也能设置 `$_` 主题变量：
 
-[source,perl6]
+[source,raku]
 .with
 ----
 say $_ with 42; # 42
@@ -107,7 +107,7 @@ say $_ with 42; # 42
 
 with/without 会把条件设置为 `$_`：
 
-[source,perl6]
+[source,raku]
 .with
 ----
 # The below code says "Found a at 0"
@@ -122,7 +122,7 @@ else                 { say "Didn't find a, b or c" }
 
 `when` 语句使主题变量 `$_` 和所提供的表达式进行智能匹配，以使在指定匹配的时候能检查值、正则表达式和类型：
 
-[source,perl6]
+[source,raku]
 .for .. when
 ----
 for 42, 43, "foo", 44, "bar" {
@@ -150,7 +150,7 @@ Python
 Perl
 ----
 
-[source,perl6]
+[source,raku]
 .for/when
 ----
 for (12, 24, 56, 42) {.say when *>40 }
@@ -158,7 +158,7 @@ for (12, 24, 56, 42) {.say when *>40 }
 
 列表解析：
 
-[source,perl6]
+[source,raku]
 .ord
 ----
 (.ord when /7$/ for 1..99)
@@ -169,7 +169,7 @@ for (12, 24, 56, 42) {.say when *>40 }
 `when` 块类似于 `if` 块，并且其中一个或两个都可以在外部块中使用，它们也都具有“语句修饰符”形式。但是如何处理相同的外部块中的代码是有区别的：当执行 `when` 块时，控制被传递到封闭块并忽略后面的语句; 但是当执行 `if` 块时，执行以下语句。 （注意，还有其他方法可以修改其他部分中讨论的每个的默认行为。）以下示例应说明 `if` 或 `when` 块的默认行为，假设 `if` 或 `when` 块中不包含特殊退出或其他副作用语句：
 
 
-[source,perl6]
+[source,raku]
 .block
 ----
 {
@@ -188,7 +188,7 @@ for (12, 24, 56, 42) {.say when *>40 }
 有一个 `when` 有而 `if` 没有的功能：`when` 的布尔上下文测试默认为 `$_ ~~` 而 `if` 不是。这影响人们怎么在不带 `$_` 值的 `when` 块中使用 `X`
 （在那种情况下， 它是 `Any`，并且 `Any` 和 `True` 智能匹配：`Any ~~ True` 产生 `True` ）。请看下面的例子：
 
-[source,perl6]
+[source,raku]
 ----
 {
     my $a = 1;
@@ -202,7 +202,7 @@ for (12, 24, 56, 42) {.say when *>40 }
 
 最后，`when` 的语句修饰符形式不影响如下语句在另一个块内部或外部的执行：
 
-[source,perl6]
+[source,raku]
 ----
 say "foo" when X; # if X is true statement is executed
                   # following statements are not affected
@@ -212,13 +212,13 @@ say "foo" when X; # if X is true statement is executed
 
 块的**默认签名**是一个名为 `$_` 的位置参数：
 
-[source,perl6]
+[source,raku]
 ----
 my &block =  { 'oi' };
 &block.signature.say; # (;; $_? is raw)
 ----
 
-[source,perl6]
+[source,raku]
 ----
 my class Employee {
    has Str $.name;
@@ -239,7 +239,7 @@ say "The driver is {.name}" given $driver;
 
 块里面会默认有一个 `$_`：
 
-[source,perl6]
+[source,raku]
 ----
 my $tiles := (< T S R E A N D >).Bag;
 my $total := $tiles.total;
