--- a/第一章-Raku介绍.adoc
+++ b/第一章-Raku介绍.adoc
@@ -1,5 +1,5 @@
 = Raku 介绍
-lovely-raku <https://lovely-raku.github.io>; 
+Raku 之美 - <https://rakulang.github.io>; 
 :description: 可爱的 Raku
 :keywords: raku, lovely, lovely-raku
 :Revision: 1.0
@@ -12,11 +12,15 @@ lovely-raku <https://lovely-raku.github.io>;
 :doctype: book
 :lang: zh   
 
-Raku 的设计进程是从 2000 年开始的. 在2000年7月19号 link:http://en.wikipedia.org/wiki/O%27Reilly_Open_Source_Convention[Perl大会]  的第四天, Larry Wall 首次宣布了 Raku 的设计进度.
+Perl 6 的设计进程是从 2000 年开始的。在2000年7月19号 link:http://en.wikipedia.org/wiki/O%27Reilly_Open_Source_Convention[Perl大会]  的第四天, Larry Wall 首次宣布了 Perl 6 的设计进度。
 
-Raku 可以有多个实现, 其中第一个完成度最高的实现是开始于 2005 年的 link:https://github.com/raku/Pugs.hs[Pugs], Pugs 解释器是用 link:https://www.haskell.org[Haskell] 实现的, 2015 年以后就没再更新, 但是 Raku 设计团队吸收了很多函数式编程的思想.
+Perl 6 可以有多个实现, 其中第一个完成度最高的实现是开始于 2005 年的 link:https://github.com/raku/Pugs.hs[Pugs], Pugs 解释器是用 link:https://www.haskell.org[Haskell] 实现的, 2015 年以后就没再更新, 但是 Perl 6 设计团队吸收了很多函数式编程的思想。
 
-2015 年12月25 日, Raku 的第一个稳定的规范发布了. 现在完成度最高的 Raku 实现是 link:https://rakudo.org[Rakudo], 其使用 link:http://moarvm.org[MoarVM] 或 Java 虚拟机作为运行时环境.
+2015 年12月25日, Perl 6 的第一个稳定的规范发布了。现在完成度最高的 Perl 6 实现是 link:https://rakudo.org[Rakudo], 其使用 link:http://moarvm.org[MoarVM] 或 Java 虚拟机作为运行时环境。
+
+2019 年10月12日, Larry Wall 宣布支持把 Perl 6 [更名](https://github.com/Raku/problem-solving/pull/89#pullrequestreview-300789072)为 [Raku](https://raku.org)。
+
+2020 年6月24日, Perl 5 社区宣布将发布 [Perl 7](https://www.perl.com/article/announcing-perl-7/)。所以, Perl 6 现在就是 Raku 了。 
 
 :sectnums:
 == Raku 介绍
@@ -75,11 +79,4 @@ To exit type 'exit' or '^D'
 2019 年3月份, link:https://commaide.com[comma]发布了第一个 Raku 编辑器社区版, 即逗号编辑器, 同时还有 Raku 的 IDEA 插件. 社区版的逗号编辑器功能已经基本够用, 如果你是资深 Raku 开发者或深度 Raku 爱好者, 建议购买完整版.
 
 如果你使用 VSCode/Atom, 那么需要到应用商店安装 Raku 插件.
-
-
-
-
-
-
-
 
